<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    tools:context=".MainActivity">

    <!-- Image View -->

    <ImageView
        android:id="@+id/team1_flag"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/canada" />

    <ImageView
        android:id="@+id/team2_flag"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/us" />

    <!-- Text View for vs text -->
    <TextView
        android:id="@+id/text_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="58dp"
        android:layout_toStartOf="@+id/team2_flag"
        android:layout_toLeftOf="@+id/team2_flag"
        android:layout_toEndOf="@+id/team1_flag"
        android:layout_toRightOf="@+id/team1_flag"
        android:gravity="center"
        android:text="@string/vs_string"
        android:textAlignment="center" />

    <!-- Text View for Team 1 -->
    <TextView
        android:id="@+id/team1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team1_flag"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/team_can"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Text View for Team 2 -->
    <TextView
        android:id="@+id/team2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team2_flag"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/team_usa"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Text View for Scoring -->
    <TextView
        android:id="@+id/score_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team1_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:text="@string/value_0"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/team2_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/value_0"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold" />

    <!-- Increase or Decrease buttons to change the score -->
    <Button
        android:id="@+id/increase_score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/string_increase"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/decrease_score1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/increase_score1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/string_decrease"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/increase_score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/string_increase"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/decrease_score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_decrease"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/increase_score2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"/>

    <!-- Radio Group for team selection -->

    <TextView
        android:id="@+id/score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/decrease_score1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/scores"
        android:textStyle="bold" />

    <!-- Radio Group for scoring -->
    <RadioGroup
        android:id="@+id/radio_group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_tv"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_1"
            android:checked="false" />

        <RadioButton
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_2"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/score3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_3"
            android:checked="false" />

        <RadioButton
            android:id="@+id/score4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_6"
            android:checked="false"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_tv"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/rg2_score_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_1"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/rg2_score_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_2"
            android:checked="false"/>

        <RadioButton
            android:id="@+id/rg2_score_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_3"
            android:checked="false" />

        <RadioButton
            android:id="@+id/rg2_score_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_score_6"
            android:checked="false"/>

    </RadioGroup>

    <!-- Reset button to reset score -->
    <Button
        android:id="@+id/resetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group1"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/reset_score_to_0"
        android:textColor="@android:color/white" />
</RelativeLayout>
</ScrollView>